Criação das Mocks e alterações menores de lógica + README
